ajout d'une explication sur la fonction FLEXTABLE

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     </section>
                     <section>
                         <h3>Les .MAXCONTENTWIDTH</h3>
-                        <div class="FLEX">
+                        <div class="FLEXTABLE">
                             <div class="rule-text">
                                 Cette class rend l'objet affecté incapable de dépasser la largeur de son parent d'un facteur plus ou moins important en lui attribuant une max width.
                             </div>
@@ -185,12 +185,12 @@
                     </section>
                     <section>
                         <h3>Les .MAXCONTENTHEIGHT</h3>
-                        <div class="FLEX">
+                        <div class="FLEXTABLE">
                             <div class="rule-text">
                                 Cette class rend l'objet affecté incapable de dépasser la largeur de son parent d'un facteur plus ou moins important en lui attribuant une max height. Cela peut causer dans certain cas des problème d'affichage nottament comme montré dans l'exemple le
                                 texte vient à sortir de son conteneur (car devenu trop petit pour le contenir) pour régler ce problème l'attribut overflow vous sera bien utile ;).
                             </div>
-                            <div class="BG1 FLEX">
+                            <div class="BG1 FLEXTABLE">
                                 <div class="BG2 MAXCONTENTHEIGHT01">
                                     Je ne peut pas dépasser 10% de la hauteur de mon parent.
                                 </div>
@@ -226,133 +226,60 @@
                     </section>
 
                     <section>
-                        <h3>Les .MAXCONTENTHEIGHT</h3>
-                        <div class="FLEX">
+                        <h3>Le .FLEXTABLE</h3>
+                        <div class="FLEXTABLE">
                             <div class="rule-text">
-                                Cette class rend l'objet affecté incapable de dépasser la largeur de son parent d'un facteur plus ou moins important en lui attribuant une max height. Cela peut causer dans certain cas des problème d'affichage nottament comme montré dans l'exemple le
-                                texte vient à sortir de son conteneur (car devenu trop petit pour le contenir) pour régler ce problème l'attribut overflow vous sera bien utile ;).
+                                Cette class transforme l'objet et ses enfants direct de façon à ce que celà devienne un tableau avec X nombre de colonne (X étant égal au nombre d'enfant direct), il suffis ensuite de mettre d'autre div à l'intérieur des enfants de l'objet ayant la class .FLEXTABLE.
                             </div>
 
-                            <div class="flextable">
-                                <div>lol
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
+                            <div class="FLEXTABLE ololbackground1">
+                                <div class="ololbackground1">Colonne 1
+                                    <div>hmmmmm</div>
+                                    <div>hmmmmm</div>
+                                    <div>hmmmmm</div>
+                                    <div>hmmmmm</div>
+                                    <div>hmmmmm</div>
+                                    <div>hmmmmm</div>
+                                    <div>hmmmmm</div>
+                                    <div>hmmmmm</div>
+                                    <div>hmmmmm</div>
+                                    <div>hmmmmm</div>
                                 </div>
-                                <div>lol
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
+                                <div class="ololbackground2">Colonne 2
+                                    <div>hmmmmm</div>
+                                    <div>hmmmmm</div>
+                                    <div>hmmmmm</div>
+                                    <div>hmmmmm</div>
+                                    <div>hmmmmm</div>
+                                    <div>hmmmmm</div>
+                                    <div>hmmmmm</div>
+                                    <div>hmmmmm</div>
+                                    <div>hmmmmm</div>
+                                    <div>hmmmmm</div>
                                 </div>
-                                <div>lol
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
+                                <div class="ololbackground3">Colonne 3
+                                    <div>hmmmmm</div>
+                                    <div>hmmmmm</div>
+                                    <div>hmmmmm</div>
+                                    <div>hmmmmm</div>
+                                    <div>hmmmmm</div>
+                                    <div>hmmmmm</div>
+                                    <div>hmmmmm</div>
+                                    <div>hmmmmm</div>
+                                    <div>hmmmmm</div>
+                                    <div>hmmmmm</div>
                                 </div>
-                                <div>lol
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                </div>
-                                <div>lol
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                </div>
-                                <div>lol
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                </div>
-                                <div>lol
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                </div>
-                                <div>lol
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                </div>
-                                <div>lol
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                </div>
-                                <div>lol
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
-                                    <div>lol</div>
+                                <div class="ololbackground1">Colonne 4
+                                    <div>hmmmmm</div>
+                                    <div>hmmmmm</div>
+                                    <div>hmmmmm</div>
+                                    <div>hmmmmm</div>
+                                    <div>hmmmmm</div>
+                                    <div>hmmmmm</div>
+                                    <div>hmmmmm</div>
+                                    <div>hmmmmm</div>
+                                    <div>hmmmmm</div>
+                                    <div>hmmmmm</div>
                                 </div>
                             </div>
                     </section>
