ajout détaillé de la class casesize

--- a/index.html
+++ b/index.html
@@ -283,7 +283,59 @@
                                 </div>
                             </div>
                     </section>
-
+                    <section>
+                        <h3>Les .CASESIZEx</h3>
+                        <div class="FLEXTABLE">
+                            <div class="rule-text MAXCONTENTWIDTH02">
+                                Cette class donne une taille en pourcent dépendante de la taille de son conteneur, contrairement au max width/height ici l'objet peut dépasser de son conteneur notamment lorsqu'il est à une taille supérieure à 100% de son conteneur. Cela peut causer dans certain cas des problème d'affichage nottament comme montré dans l'exemple le
+                                texte vient à sortir de son conteneur (car devenu trop petit pour le contenir) pour régler ce problème l'attribut overflow vous sera bien utile ;).
+                            </div>
+                            <div class="BG1 FLEXTABLECOLLUMN">
+                                <div class="BG2 CASESIZEx01">
+                                    Je fais 10% de la taille de mon conteneur.
+                                </div>
+                                <div class="BG2 CASESIZEx02">
+                                    Je fais 20% de la taille de mon conteneur.
+                                </div>
+                                <div class="BG2 CASESIZEx03">
+                                    Je fais 30% de la taille de mon conteneur.
+                                </div>
+                                <div class="BG2 CASESIZEx04">
+                                    Je fais 40% de la taille de mon conteneur.
+                                </div>
+                                <div class="BG2 CASESIZEx05">
+                                    Je fais 50% de la taille de mon conteneur.
+                                </div>
+                                <div class="BG2 CASESIZEx06">
+                                    Je fais 60% de la taille de mon conteneur.
+                                </div>
+                                <div class="BG2 CASESIZEx07">
+                                    Je fais 70% de la taille de mon conteneur.
+                                </div>
+                                <div class="BG2 CASESIZEx08">
+                                    Je fais 80% de la taille de mon conteneur.
+                                </div>
+                                <div class="BG2 CASESIZEx09">
+                                    Je fais 90% de la taille de mon conteneur.
+                                </div>
+                                <div class="BG2 CASESIZEx1">
+                                    Je fais 100% de la taille de mon conteneur.
+                                </div>
+                                <div class="BG2 CASESIZEx2">
+                                    Je fais 200% de la taille de mon conteneur.
+                                </div>
+                                <div class="BG2 CASESIZEx3">
+                                    Je fais 300% de la taille de mon conteneur.
+                                </div>
+                                <div class="BG2 CASESIZEx4">
+                                    Je fais 400% de la taille de mon conteneur.
+                                </div>
+                                <div class="BG2 CASESIZEx5">
+                                    Je fais 500% de la taille de mon conteneur.
+                                </div>
+                            </div>
+                        </div>
+                    </section>
                 </article>
 
                 <article>
