fixed class name for PADDINGALL25

--- a/index.html
+++ b/index.html
@@ -715,7 +715,7 @@
                                     <div>
                                         Lorem ipsum dolor sit amet, consectetuer adispicing elit.
                                     </div>
-                                    <div class="PADDINGAll25">
+                                    <div class="PADDINGALL25">
                                         Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
                                     </div>
                                 </div>
