updated index.html with more explicit rules about borders

--- a/index.html
+++ b/index.html
@@ -1243,7 +1243,7 @@
                         </div>
                     </section>
                     <section>
-                        <h3>Border Top</h3>
+                        <h3>Simple Border Top</h3>
                         <div class="rules-container">
                             <h4>BORDERTOP1<br>BT1</h4>
                             <div class="rule-container">
@@ -1303,7 +1303,7 @@
                         </div>
                     </section>
                     <section>
-                        <h3>Border Right</h3>
+                        <h3>Simple Border Right</h3>
                         <div class="rules-container">
                             <h4>BORDERRIGHT1<br>BR1</h4>
                             <div class="rule-container">
@@ -1363,7 +1363,7 @@
                         </div>
                     </section>
                     <section>
-                        <h3>Border Bottom</h3>
+                        <h3>Simple Border Bottom</h3>
                         <div class="rules-container">
                             <h4>BORDERBOTTOM1<br>BB1</h4>
                             <div class="rule-container">
@@ -1423,7 +1423,7 @@
                         </div>
                     </section>
                     <section>
-                        <h3>Border Left</h3>
+                        <h3>Simple Border Left</h3>
                         <div class="rules-container">
                             <h4>BORDERLEFT1<br>BL1</h4>
                             <div class="rule-container">
@@ -1483,7 +1483,7 @@
                         </div>
                     </section>
                     <section>
-                        <h3>Border All</h3>
+                        <h3>Simple Border All</h3>
                         <div class="rules-container">
                             <h4>BORDERALL1<br>BA1</h4>
                             <div class="rule-container">
@@ -1538,6 +1538,78 @@
                                     <div class="BORDERALL5">
                                         Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
                                     </div>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                    <section>
+                        <h3>Autre règles pour les borders</h3>
+                        <div class="rules-container">
+                            <div class="rule-container">
+                                <div class="rule-text" style="width:100%">
+                                    Il existe MOULT autres règles pour les bordures, suivant l'expression régulière suivante:<br>
+                                    BORDER[side][style][color][width]<br>
+                                    ou<br>
+                                    B[si][st][c][width]<br>
+                                    <br>
+                                    <br>
+                                    Avec [side] devant valoir, au choix:<br>
+                                    TOP<br>
+                                    RIGHT<br>
+                                    BOTTOM<br>
+                                    LEFT<br>
+                                    ALL<br>
+                                    <br>
+                                    Avec [s] devant valoir, au choix:<br>
+                                    T<br>
+                                    R<br>
+                                    B<br>
+                                    L<br>
+                                    A<br>
+                                    <br>
+                                    Avec [style] devant valoir, au choix:<br>
+                                    DASHED<br>
+                                    DOUBLE<br>
+                                    DOTTED<br>
+                                    SOLID<br>
+                                    <br>
+                                    Avec [st] devant valoir, au choix:<br>
+                                    DA<br>
+                                    DO<br>
+                                    DT<br>
+                                    SO<br>
+                                    <br>
+                                    Avec [color] devant valoir, au choix:<br>
+                                    RED<br>
+                                    GREEN<br>
+                                    BLUE<br>
+                                    YELLOW<br>
+                                    BLACK<br>
+                                    WHITE<br>
+                                    GREY1<br>
+                                    GREY2<br>
+                                    GREY3<br>
+                                    <br>
+                                    Avec [c] devant valoir, au choix:<br>
+                                    R<br>
+                                    G<br>
+                                    B<br>
+                                    Y<br>
+                                    0<br>
+                                    W<br>
+                                    G1<br>
+                                    G2<br>
+                                    G3<br>
+                                    <br>
+                                    Avec [side] devant valoir, au choix:<br>
+                                    1<br>
+                                    2<br>
+                                    3<br>
+                                    4<br>
+                                    5<br>
+                                    <br>
+                                    <br>
+                                    (les bordures simples présentées plus haut prennent pour valeur [style]=SOLID et [color]=BLACK en réduisant donc la syntaxe)
                                 </div>
                             </div>
                         </div>
