used complete border rules in example.html

--- a/example.html
+++ b/example.html
@@ -23,7 +23,7 @@
 
             <div id="wrapper-main">
                 <main>
-                <article id="A1" class="BA3 MB20">
+                <article id="A1" class="BADA03 MB20">
                     <section id="A1-S1" class="F MB10">
                         <p>
                         <span class="REM075">Eminuit autem inter humilia supergressa iam impotentia fines mediocrium delictorum nefanda Clematii cuiusdam Alexandrini nobilis mors repentina; cuius socrus cum misceri sibi generum, flagrans eius amore, non impetraret, ut ferebatur, per palatii pseudothyrum introducta, oblato pretioso reginae monili id adsecuta est, ut ad Honoratum tum comitem orientis formula missa letali omnino scelere nullo contactus idem Clematius nec hiscere nec loqui permissus occideretur.</span><br>
@@ -119,7 +119,7 @@
                         </p>
                     </section>
                 </article>
-                <article id="A2" class="BA3">
+                <article id="A2" class="BADT03">
                     <section id="A2-S1" class="MB10">
                         <img src="images/pbjt.gif" class="TL" />
                         <img src="images/pbjt.gif" class="T" />
@@ -179,7 +179,7 @@
                     </section>
                 </article>
                 </main>
-                <aside class="BA2">
+                <aside class="BASOG12">
                     <ul>
                         <li>
                             <figure>
