--- a/index.html
+++ b/index.html
@@ -72,15 +72,15 @@
                         <div class="rule-container">
                             <div class="rule-text">
                                 Règle css de positionement, elles se mettent en (position:absolute) et dépendent donc de leurs premier parent ayant la propriété (position:relative). Noms des class:
-                                <li>.L = Met l'objet dans le coin gauche de son parent et se trouvant à 50% en dessous du top de ce même parrent.</li>
-                                <li>.R = Met l'objet dans le coin droit de son parent et se trouvant à 50% en dessous du top de ce même parrent.</li>
-                                <li>.T = Met l'objet dans la partie supérieur de son parent en étant centré avec un left:50%.</li>
-                                <li>.B = Met l'objet dans la partie inférieur de son parent en étant centré avec un left:50%.</li>
-                                <li>.M = Met l'objet au centre de son parent avec equidistance entre les deux pointd'un même axe Y ou X de son parent.</li>
-                                <li>.TL = Met l'objet dans le coin supérieur gauche de son parent.</li>
-                                <li>.TR = Met l'objet dans le coin supérieur droit de son parent.</li>
-                                <li>.BL = Met l'objet dans le coin inférieur gauche de son parent.</li>
-                                <li>.BR = Met l'objet dans le coin inférieur droit de son parent.</li>
+                                <li>L = Met l'objet dans le coin gauche de son parent et se trouvant à 50% en dessous du top de ce même parrent.</li>
+                                <li>R = Met l'objet dans le coin droit de son parent et se trouvant à 50% en dessous du top de ce même parrent.</li>
+                                <li>T = Met l'objet dans la partie supérieur de son parent en étant centré avec un left:50%.</li>
+                                <li>B = Met l'objet dans la partie inférieur de son parent en étant centré avec un left:50%.</li>
+                                <li>M = Met l'objet au centre de son parent avec equidistance entre les deux pointd'un même axe Y ou X de son parent.</li>
+                                <li>TL = Met l'objet dans le coin supérieur gauche de son parent.</li>
+                                <li>TR = Met l'objet dans le coin supérieur droit de son parent.</li>
+                                <li>BL = Met l'objet dans le coin inférieur gauche de son parent.</li>
+                                <li>BR = Met l'objet dans le coin inférieur droit de son parent.</li>
                             </div>
                             <div class="rule-show">
                                 <div class="CUBE">
@@ -95,15 +95,15 @@
                                     <div>bottomright</div>
                                 </div>
                                 <div class="CUBE">
-                                    <div class="left">left</div>
-                                    <div class="right">right</div>
-                                    <div class="top">top</div>
-                                    <div class="bottom">bottom</div>
-                                    <div class="middle">middle</div>
-                                    <div class="topleft">topleft</div>
-                                    <div class="topright">topright</div>
-                                    <div class="bottomleft">bottomleft</div>
-                                    <div class="bottomright">bottomright</div>
+                                    <div class="L">left</div>
+                                    <div class="R">right</div>
+                                    <div class="T">top</div>
+                                    <div class="B">bottom</div>
+                                    <div class="M">middle</div>
+                                    <div class="TL">topleft</div>
+                                    <div class="TR">topright</div>
+                                    <div class="BL">bottomleft</div>
+                                    <div class="BR">bottomright</div>
                                 </div>
                             </div>
                         </div>
@@ -211,13 +211,13 @@
 
                     <section>
                         <h3>Le .FLEXTABLE</h3>
-                        <div class="FLEXTABLE">
+                        <div class="F">
                             <div class="rule-text">
                                 Cette class transforme l'objet et ses enfants direct de façon à ce que celà devienne un tableau avec X nombre de colonne (X étant égal au nombre d'enfant direct), il suffis ensuite de mettre d'autre div à l'intérieur des enfants de l'objet ayant la class
                                 .FLEXTABLE.
                             </div>
 
-                            <div class="FLEXTABLE ololbackground1">
+                            <div class="F ololbackground1">
                                 <div class="ololbackground1">Colonne 1
                                     <div>hmmmmm</div>
                                     <div>hmmmmm</div>
