--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                         <h3>Les .MAXCONTENTWIDTH</h3>
                         <div class="FLEXTABLE">
                             <div class="rule-text">
-                                Cette class rend l'objet affecté incapable de dépasser la largeur de son parent d'un facteur plus ou moins important en lui attribuant une max width.
+                                MAXCONTENTWIDTH/MCW. Cette class rend l'objet affecté incapable de dépasser la largeur de son parent d'un facteur plus ou moins important en lui attribuant une max width.
                             </div>
                             <div class="ololbackground3">
                                 <div class="ololbackground1 MAXCONTENTWIDTH01">
@@ -171,7 +171,7 @@
                         <h3>Les .MAXCONTENTHEIGHT</h3>
                         <div class="FLEXTABLE">
                             <div class="rule-text">
-                                Cette class rend l'objet affecté incapable de dépasser la largeur de son parent d'un facteur plus ou moins important en lui attribuant une max height. Cela peut causer dans certain cas des problème d'affichage nottament comme montré dans l'exemple le
+                                MAXCONTENTHEIGHT/MCH. Cette class rend l'objet affecté incapable de dépasser la largeur de son parent d'un facteur plus ou moins important en lui attribuant une max height. Cela peut causer dans certain cas des problème d'affichage nottament comme montré dans l'exemple le
                                 texte vient à sortir de son conteneur (car devenu trop petit pour le contenir) pour régler ce problème l'attribut overflow vous sera bien utile ;).
                             </div>
                             <div class="BG1 FLEXTABLE">
@@ -213,8 +213,8 @@
                         <h3>Le .FLEXTABLE</h3>
                         <div class="F">
                             <div class="rule-text">
-                                Cette class transforme l'objet et ses enfants direct de façon à ce que celà devienne un tableau avec X nombre de colonne (X étant égal au nombre d'enfant direct), il suffis ensuite de mettre d'autre div à l'intérieur des enfants de l'objet ayant la class
-                                .FLEXTABLE.
+                                FLEXTABLE/F. Cette class transforme l'objet et ses enfants direct de façon à ce que celà devienne un tableau avec X nombre de colonne (X étant égal au nombre d'enfant direct), il suffis ensuite de mettre d'autre div à l'intérieur des enfants de l'objet ayant la class
+                                .FLEXTABLE/.F.
                             </div>
 
                             <div class="F ololbackground1">
@@ -272,7 +272,7 @@
                         <h3>Les .CASESIZEx</h3>
                         <div class="FLEXTABLE">
                             <div class="rule-text MAXCONTENTWIDTH02">
-                                Cette class donne une taille en pourcent dépendante de la taille de son conteneur, contrairement au max width/height ici l'objet peut dépasser de son conteneur notamment lorsqu'il est à une taille supérieure à 100% de son conteneur. Cela peut causer dans
+                                CASESIZEx/CSx .Cette class donne une taille en pourcent dépendante de la taille de son conteneur, contrairement au max width/height ici l'objet peut dépasser de son conteneur notamment lorsqu'il est à une taille supérieure à 100% de son conteneur. Cela peut causer dans
                                 certain cas des problème d'affichage nottament comme montré dans l'exemple le texte vient à sortir de son conteneur (car devenu trop petit pour le contenir) pour régler ce problème l'attribut overflow vous sera bien utile
                                 ;).
                             </div>
