YAAAAAAAAAAAAAAAAA PRESQUE PUTAIN DE PRET

--- a/index.html
+++ b/index.html
@@ -211,13 +211,13 @@
 
                     <section>
                         <h3>Le .FLEXTABLE</h3>
-                        <div class="F">
+                        <div class="FT">
                             <div class="rule-text">
                                 FLEXTABLE/F. Cette class transforme l'objet et ses enfants direct de façon à ce que celà devienne un tableau avec X nombre de colonne (X étant égal au nombre d'enfant direct), il suffis ensuite de mettre d'autre div à l'intérieur des enfants de l'objet ayant la class
                                 .FLEXTABLE/.F.
                             </div>
 
-                            <div class="F ololbackground1">
+                            <div class="FT ololbackground1">
                                 <div class="ololbackground1">Colonne 1
                                     <div>hmmmmm</div>
                                     <div>hmmmmm</div>
@@ -1771,7 +1771,7 @@
                                     <br> G2
                                     <br> G3
                                     <br>
-                                    <br> Avec [side] devant valoir, au choix:<br> 1
+                                    <br> Avec [width] devant valoir, au choix:<br> 1
                                     <br> 2
                                     <br> 3
                                     <br> 4
