néttoyage du dossier

--- a/example.html
+++ b/example.html
@@ -185,7 +185,7 @@
                             <figure>
                                 <img src="images/bandeau.jpeg" />
                                 <figcaption>
-                                Exemple de site partenaire - <a href="#">Lien</a>
+                                Exemple de site partenaire - <a href="https://www.youtube.com/watch?v=sTSA_sWGM44">Lien</a>
                                 <figcaption>
                             </figure>
                         </li>
@@ -193,7 +193,7 @@
                             <figure>
                                 <img src="images/bandeau.jpeg" />
                                 <figcaption>
-                                Exemple de site partenaire - <a href="#">Lien</a>
+                                Exemple de site partenaire - <a href="https://www.youtube.com/watch?v=sTSA_sWGM44">Lien</a>
                                 <figcaption>
                             </figure>
                         </li>
@@ -201,7 +201,7 @@
                             <figure>
                                 <img src="images/bandeau.jpeg" />
                                 <figcaption>
-                                Exemple de site partenaire - <a href="#">Lien</a>
+                                Exemple de site partenaire - <a href="https://www.youtube.com/watch?v=sTSA_sWGM44">Lien</a>
                                 <figcaption>
                             </figure>
                         </li>
@@ -209,7 +209,7 @@
                             <figure>
                                 <img src="images/bandeau.jpeg" />
                                 <figcaption>
-                                Exemple de site partenaire - <a href="#">Lien</a>
+                                Exemple de site partenaire - <a href="https://www.youtube.com/watch?v=sTSA_sWGM44">Lien</a>
                                 <figcaption>
                             </figure>
                         </li>
@@ -217,7 +217,7 @@
                             <figure>
                                 <img src="images/bandeau.jpeg" />
                                 <figcaption>
-                                Exemple de site partenaire - <a href="#">Lien</a>
+                                Exemple de site partenaire - <a href="https://www.youtube.com/watch?v=sTSA_sWGM44">Lien</a>
                                 <figcaption>
                             </figure>
                         </li>
@@ -225,7 +225,7 @@
                             <figure>
                                 <img src="images/bandeau.jpeg" />
                                 <figcaption>
-                                Exemple de site partenaire - <a href="#">Lien</a>
+                                Exemple de site partenaire - <a href="https://www.youtube.com/watch?v=sTSA_sWGM44">Lien</a>
                                 <figcaption>
                             </figure>
                         </li>
@@ -233,7 +233,7 @@
                             <figure>
                                 <img src="images/bandeau.jpeg" />
                                 <figcaption>
-                                Exemple de site partenaire - <a href="#">Lien</a>
+                                Exemple de site partenaire - <a href="https://www.youtube.com/watch?v=sTSA_sWGM44">Lien</a>
                                 <figcaption>
                             </figure>
                         </li>
@@ -241,7 +241,7 @@
                             <figure>
                                 <img src="images/bandeau.jpeg" />
                                 <figcaption>
-                                Exemple de site partenaire - <a href="#">Lien</a>
+                                Exemple de site partenaire - <a href="https://www.youtube.com/watch?v=sTSA_sWGM44">Lien</a>
                                 <figcaption>
                             </figure>
                         </li>
@@ -249,7 +249,7 @@
                             <figure>
                                 <img src="images/bandeau.jpeg" />
                                 <figcaption>
-                                Exemple de site partenaire - <a href="#">Lien</a>
+                                Exemple de site partenaire - <a href="https://www.youtube.com/watch?v=sTSA_sWGM44">Lien</a>
                                 <figcaption>
                             </figure>
                         </li>
@@ -257,7 +257,7 @@
                             <figure>
                                 <img src="images/bandeau.jpeg" />
                                 <figcaption>
-                                Exemple de site partenaire - <a href="#">Lien</a>
+                                Exemple de site partenaire - <a href="https://www.youtube.com/watch?v=sTSA_sWGM44">Lien</a>
                                 <figcaption>
                             </figure>
                         </li>
