--- a/index.html
+++ b/index.html
@@ -2345,6 +2345,11 @@
                         Example
                     </a>
                 </h2>
+                <p class="FS4 igonnabebigifyoupassonme">
+                    <a href="ALISU/index.html">
+                        Menu exemple
+                    </a>
+                </p>
             </footer>
         </div>
 
