--- a/index.html
+++ b/index.html
@@ -2346,7 +2346,7 @@
                     </a>
                 </h2>
                 <p class="FS4 igonnabebigifyoupassonme">
-                    <a href="ALISU/index.html">
+                    <a href="ALICE/testmenu.html">
                         Menu exemple
                     </a>
                 </p>
